--- a/HTML Foundations/html-boilerplate/Pargraph-testing/assignment.html
+++ b/HTML Foundations/html-boilerplate/Pargraph-testing/assignment.html
@@ -12,4 +12,4 @@
     </body>
 </html>
 
-<! -- testing out different types of commands in HTML -->
+<! -- testing out different types of commands in HTML. Finished testing -->
