--- a/HTML Foundations/html-boilerplate/odin-links-and-images/index.html
+++ b/HTML Foundations/html-boilerplate/odin-links-and-images/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Homepage</h1>
-    <a href="https://www.theodinproject.com/about">click me</a>
+    <a href="https://www.theodinproject.com/about">Click Me</a>
 
     <a href="about.html">About</a>
 </body>
