--- a/CSS Foundations/CSS excersises (github)/01-css-methods.html
+++ b/CSS Foundations/CSS excersises (github)/01-css-methods.html
@@ -1,15 +1,21 @@
 <head>
+    <link rel="stylesheet" href="external.css">
     <style>
-        div{
-        color: white;
-        background-color: red;
-        font-size: 32px;
-        }
-
         p {
         color: white;
         background-color: green;
+        font-size: 18px;
+        }
+
+        button {
+            background-color: orange;
+            font-size: 18px;
         }
     </style>
     </head>
-    <body>...</body>
+    <body>
+
+        <div>Style me via the external method !</div>
+
+        <p>I would like to be styled with the internal method, please.</p>
+    </body>
