--- a/CSS Foundations/CSS excersises (github)/01-css-methods.html
+++ b/CSS Foundations/CSS excersises (github)/01-css-methods.html
@@ -15,7 +15,9 @@
     </head>
     <body>
 
-        <div>Style me via the external method !</div>
+        <div><b>Style me via the external method !</b></div>
 
         <p>I would like to be styled with the internal method, please.</p>
+
+        <button>Inline method</button>
     </body>
