--- a/CSS Foundations/CSS excersises (github)/01-css-methods.html
+++ b/CSS Foundations/CSS excersises (github)/01-css-methods.html
@@ -6,11 +6,6 @@
         background-color: green;
         font-size: 18px;
         }
-
-        button {
-            background-color: orange;
-            font-size: 18px;
-        }
     </style>
     </head>
     <body>
@@ -19,5 +14,5 @@
 
         <p>I would like to be styled with the internal method, please.</p>
 
-        <button>Inline method</button>
+        <button style="background-color: orange; font-size: 18px;">Inline method</button>
     </body>
