--- a/CSS Foundations/CSS excersises (github)/01-css-methods.html
+++ b/CSS Foundations/CSS excersises (github)/01-css-methods.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Imad</title>
+
     <link rel="stylesheet" href="external.css">
+
     <style>
         p {
         color: white;
@@ -11,8 +19,6 @@
     <body>
 
         <div><b>Style me via the external method !</b></div>
-
         <p>I would like to be styled with the internal method, please.</p>
-
         <button style="background-color: orange; font-size: 18px;">Inline method</button>
     </body>
