trying to apply class selector

--- a/CSS Foundations/CSS excersises (github)/02/02-class-id-selectors.html
+++ b/CSS Foundations/CSS excersises (github)/02/02-class-id-selectors.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="title">Number 1 - I'm a class</div>
-
+    <div class="alert-text">
+        Number 1 - I'm a class
+    </div>
 </body>
 </html>
