--- a/CSS Foundations/CSS excersises (github)/02/index.html
+++ b/CSS Foundations/CSS excersises (github)/02/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="alert-text">
-        Number 1 - I'm a class
+        <p class="pink"> Number 1 - I'm a class </p>
     </div>
 </body>
 </html>
