--- a/CSS Foundations/CSS excersises (github)/02/index.html
+++ b/CSS Foundations/CSS excersises (github)/02/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
         <p class="pink"> Number 1 - I'm a class </p>
-    </div>
+
+        <div id="title">Number 2 - I'm one ID.</div>
 </body>
 </html>
