--- a/CSS Foundations/CSS excersises (github)/02/index.html
+++ b/CSS Foundations/CSS excersises (github)/02/index.html
@@ -11,5 +11,7 @@
         <p class="pink"> Number 1 - I'm a class </p>
 
         <div id="title">Number 2 - I'm one ID.</div>
+
+        <p class="cooler">Number 3 - I'm a class, but cooler!</p>
 </body>
 </html>
