--- a/CSS Foundations/CSS excersises (github)/02/index.html
+++ b/CSS Foundations/CSS excersises (github)/02/index.html
@@ -13,5 +13,7 @@
         <div id="title">Number 2 - I'm one ID.</div>
 
         <p class="cooler">Number 3 - I'm a class, but cooler!</p>
+
+        <div id="second">Number 4 - I'm another ID!</div>
 </body>
 </html>
