--- a/CSS Foundations/CSS excersises (github)/02/index.html
+++ b/CSS Foundations/CSS excersises (github)/02/index.html
@@ -15,5 +15,7 @@
         <p class="cooler">Number 3 - I'm a class, but cooler!</p>
 
         <div id="second">Number 4 - I'm another ID!</div>
+
+        <p class="pink2">Number 5 - "I'm a class</p>
 </body>
 </html>
