--- a/CSS Foundations/CSS excersises (github)/02/index.html
+++ b/CSS Foundations/CSS excersises (github)/02/index.html
@@ -14,7 +14,7 @@
 
         <p class="cooler">Number 3 - I'm a class, but cooler!</p>
 
-        <div id="second"><b>>Number 4 - I'm another ID!</b></div>
+        <div id="second"><b>Number 4 - I'm another ID!</b></div>
 
         <p class="pink2">Number 5 - "I'm a class</p>
 </body>
