--- a/CSS Foundations/CSS excersises (github)/03/index.html
+++ b/CSS Foundations/CSS excersises (github)/03/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Grouping.css">
-    <title>Document</title>
+    <title>03</title>
 </head>
 <body>
-    
+    <p class="black">Click Me!</p>
 </body>
 </html>
