--- a/CSS Foundations/CSS excersises (github)/03/index.html
+++ b/CSS Foundations/CSS excersises (github)/03/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <p class="black">Click Me!</p>
-    <p id="yellow">No, Click Me!</p>
+    <p class="yellow">No, Click Me!</p>
 </body>
 </html>
