fixing CSS declarations.

--- a/CSS Foundations/CSS excersises (github)/05/index.html
+++ b/CSS Foundations/CSS excersises (github)/05/index.html
@@ -8,6 +8,8 @@
     <title>Descendant Combinator</title>
 </head>
 <body>
-    
+    <div>
+        <p>This should be styled.</p>
+    </div>
 </body>
 </html>
