--- a/CSS Foundations/CSS excersises (github)/05/index.html
+++ b/CSS Foundations/CSS excersises (github)/05/index.html
@@ -11,5 +11,11 @@
     <div>
         <p>This should be styled.</p>
     </div>
+    <p>This should be unstyled.</p>
+    <p>This should be unstyled.</p>
+    <div>
+        <p>This should be styled.</p>
+    </div>
+
 </body>
 </html>
